--- a/package.json
+++ b/package.json
@@ -31,5 +31,12 @@
     	"plates": "0.4.x",
     	"shelljs": "0.1.0",
     	"chokidar": "0.5.0"
-  	}
+  	},
+  	"keywords": [
+		"static",
+		"html",
+		"generator"
+  	],
+  	"devDependencies": {},
+  	"optionalDependencies": {}
 }
