--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
 		"name": "Valdoweb",
 		"url": "http://valdoweb.com"
 	},
+	"scripts": {
+    	"test": "echo \"Error: no test specified\" && exit 1"
+ 	 },
 	"repository": {
     "type": "git",
     "url": "https://github.com/valdoweb/flatsite.git"
